# marktex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-pdfs.yml
IS_2026/: retrieval_test.md
TEX/docs/: example.tex
docs/: example.md
recent/: example.tex  retrieval_test.tex  test.tex
src/marktex/: __init__.py  cli.py
test/: test.md
